--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "tailwindcss": "^3.2.6",
     "yahoo-finance": "^0.3.8"
   },
   "scripts": {
@@ -43,5 +44,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "tailwindcss": "^3.2.6"
+  }
 }
